--- a/src/classes/PublicMetricsController.cls
+++ b/src/classes/PublicMetricsController.cls
@@ -1,12 +1,6 @@
 public with sharing class PublicMetricsController {
-	public List<Metric_Result__c> metrics {
-		get {
-			this.metrics = [SELECT ShortName__c,Result__c,Label__c,Unit__c FROM Metric_Result__c];
-			return this.metrics;
-		}
-		private set;
-	}
-
+	public List<Metric_Result__c> metrics { get; private set;}
 	public PublicMetricsController() {
+		this.metrics = PublicMetrics.getCachedMetrics();
 	}
 }
