--- a/src/classes/PublicMetricsAPI.cls
+++ b/src/classes/PublicMetricsAPI.cls
@@ -3,10 +3,9 @@ global class PublicMetricsAPI {
   @HttpGet
   global static List<Metric_Result__c> getMetrics() {
     try {
-      new PublicMetricsDoDML().doDML();
+      List<Metric_Result__c> result = PublicMetrics.metrics;
     } catch(Exception e) {
-      
     }
-    return new PublicMetricsController().metrics;
+    return PublicMetrics.getCachedMetrics();
   }
 }
