--- a/src/classes/PublicMetricsAPI.cls
+++ b/src/classes/PublicMetricsAPI.cls
@@ -2,10 +2,6 @@
 global class PublicMetricsAPI {
   @HttpGet
   global static List<Metric_Result__c> getMetrics() {
-    try {
-      List<Metric_Result__c> result = PublicMetrics.metrics;
-    } catch(Exception e) {
-    }
-    return PublicMetrics.getCachedMetrics();
+    return PublicMetrics.metrics;
   }
 }
