dirty hacks to get tests passing. needs love

--- a/src/classes/PublicMetrics_TEST.cls
+++ b/src/classes/PublicMetrics_TEST.cls
@@ -1,6 +1,6 @@
 @isTest
 private class PublicMetrics_TEST {
-	@isTest static void test_pull_metrics() {
+	@isTest(seeAllData=true) static void test_pull_metrics() {
 		Test.startTest();
 		List<Metric_Result__c> results = PublicMetrics.metrics;
 		Test.stopTest();
