--- a/src/classes/PublicMetrics_TEST.cls
+++ b/src/classes/PublicMetrics_TEST.cls
@@ -1,5 +1,6 @@
 @isTest
-private class PublicMetrics_TEST {
+public class PublicMetrics_TEST {
+	public static boolean useCachedData = true;
 	@isTest(seeAllData=true) static void test_pull_metrics() {
 		Test.startTest();
 		List<Metric_Result__c> results = PublicMetrics.metrics;
