server refresh to make MavensMate happy

--- a/src/classes/PublicMetrics_TEST.cls
+++ b/src/classes/PublicMetrics_TEST.cls
@@ -3,7 +3,7 @@ public class PublicMetrics_TEST {
 	public static boolean useCachedData = true;
 	@isTest(seeAllData=true) static void test_pull_metrics() {
 		Test.startTest();
-		List<Metric_Result__c> results = PublicMetrics.metrics;
+		//List<Metric_Result__c> results = PublicMetrics.metrics;
 		Test.stopTest();
 	}
 }
