--- a/src/classes/PublicMetrics.cls
+++ b/src/classes/PublicMetrics.cls
@@ -13,7 +13,18 @@ public with sharing class PublicMetrics {
 						WHERE ShortName__c IN :shortNames];
 	}
 
+	// this is inelegant and causes an unnecessary SOQL query. getMetrics(List<String>) will need refactoring
+	public static List<Metric_Result__c> getMetrics() {
+		List<Public_Metrics__mdt> definitions = PublicMetrics.getMetricDefinitions();
+		List<String> shortNames = new List<String>();
+		for(Public_Metrics__mdt pm : definitions) {
+			shortNames.add(pm.ShortName__c);
+		}
+		return PublicMetrics.getMetrics(shortNames);
+	}
+
 	public static List<Metric_Result__c> getMetrics(List<String> shortNames) {
+		// need a more robust check here, perhaps it's own method.
 		if (UserInfo.getUserType() == 'Standard' && !PublicMetrics_TEST.useCachedData) {
 			List<Metric_Result__c> results = new List<Metric_Result__c>();
 			List<Public_Metrics__mdt> definitions = PublicMetrics.getMetricDefinitions(shortNames);
