--- a/src/classes/PublicMetricsController.cls
+++ b/src/classes/PublicMetricsController.cls
@@ -1,10 +1,10 @@
 public with sharing class PublicMetricsController {
-	public List<Metric_Result__c> metrics { get; private set;}
-	public PublicMetricsController() {
-		this.metrics = PublicMetrics.getCachedMetrics();
+	public List<Metric_Result__c> getMetrics() {
+		return PublicMetrics.getCachedMetrics();
 	}
+
 	public PageReference doDML() {
-		List<Metric_Result__c> result = PublicMetrics.metrics;
+		List<Metric_Result__c> result = PublicMetrics.getMetrics();
 		return Page.PublicMetricsDashboard;
 	}
 }
