--- a/src/classes/PublicMetricsAPI.cls
+++ b/src/classes/PublicMetricsAPI.cls
@@ -2,6 +2,6 @@
 global class PublicMetricsAPI {
   @HttpGet
   global static List<Metric_Result__c> getMetrics() {
-    return PublicMetrics.metrics;
+    return PublicMetrics.getMetrics();
   }
 }
