fix the test variables so that we aren't ALWAYS in test mode :)

--- a/src/classes/PublicMetrics_TEST.cls
+++ b/src/classes/PublicMetrics_TEST.cls
@@ -1,6 +1,6 @@
 @isTest
 public class PublicMetrics_TEST {
-	public static boolean useCachedData = true;
+	public static boolean useCachedData = false;
 	@isTest(seeAllData=true) static void test_pull_metrics() {
 		Test.startTest();
 		List<Metric_Result__c> results = PublicMetrics.getMetrics();
