allow API to request a specific metric

--- a/src/classes/PublicMetricsAPI.cls
+++ b/src/classes/PublicMetricsAPI.cls
@@ -1,7 +1,14 @@
-@RestResource(urlMapping='/metrics')
+@RestResource(urlMapping='/metrics/*')
 global class PublicMetricsAPI {
   @HttpGet
   global static List<Metric_Result__c> getMetrics() {
+    RestRequest req = RestContext.request;
+    if(req != null) {
+      String metricName = req.requestURI.substring(req.requestURI.lastIndexOf('/')+1);
+      if(!String.isBlank(metricName)) {
+        return new List<Metric_Result__c> { PublicMetrics.getMetric(metricName)};
+      }
+    }
     return PublicMetrics.getMetrics();
   }
 }
