--- a/src/classes/PublicMetrics_Schedulable_TEST.cls
+++ b/src/classes/PublicMetrics_Schedulable_TEST.cls
@@ -5,8 +5,8 @@ private class PublicMetrics_Schedulable_TEST {
    // This method uses seeAllData and UnCached Results to let the
    // scheduled class actually create Metric Results.
    // Expecting an empty db.
+   // seeAllData required to get Report IDs
 	 @isTest(seeAllData=true) static void test_schedulableClass() {
-     PublicMetrics_TEST.useCachedData = false;
 		 List<Metric_Result__c> ml = [SELECT Id FROM Metric_Result__c ];
 		 System.assertEquals(ml.size(),0);
 
@@ -18,6 +18,5 @@ private class PublicMetrics_Schedulable_TEST {
 		 ml = [SELECT Id FROM Metric_Result__c];
 		 List<Public_Metrics__mdt> pm = [SELECT Id FROM Public_Metrics__mdt];
 		 System.assertEquals(pm.size(),ml.size());
-     PublicMetrics_TEST.useCachedData = true;
 	 }
 }
